--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: microbio
 Type: Package
-Title: What the Package Does (Title Case)
+Title: R utils for microbiology bioinformatics
 Version: 0.1
 Date: 2016-03-01
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Author: Alessandro Brozzi
+Maintainer: <alessandro.brozzi@gmail.com>
+Description: A set of R functions, tools, utilities and wrappers to perform bionformatic analyses applied to microbiology.
+License: GPL
 LazyData: TRUE
+RoxygenNote: 5.0.1
