--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,7 @@ export(assign.vfeatures)
 export(custom_nexus)
 export(get.nexus.tips)
 export(hello)
+export(read_edges)
+export(read_splits)
 export(read_stretcher)
 export(subset_nexus)
