--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(assign.vfeatures)
 export(custom_nexus)
 export(get.nexus.tips)
 export(hello)
+export(read.breseq.gd)
 export(read_edges)
 export(read_splits)
 export(read_stretcher)
